--- a/public/admin/package.json
+++ b/public/admin/package.json
@@ -16,7 +16,8 @@
     "style-loader": "^0.19.0",
     "vue": "^2.5.2",
     "vue-paginate": "^3.5.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-wysiwyg": "^1.2.7"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
